# src/routes/users.route.js
@@ -2,10 +2,12 @@ import express from 'express';
 import {
   getAllUsers,
   signup,
-  login, getSpecificUser, updateSpecificUser, deleteSpecificUser
+  login, getSpecificUser, updateSpecificUser, deleteSpecificUser,
+  forgetPassword, resetPassword
 } from '../controllers/users.controller';
 import {
-  userSignupInput, userUpdateInput, userLoginInput
+  userSignupInput, userUpdateInput, userLoginInput, userEmailInput,
+  userResetInput
 } from '../middleware/user.validation';
 import { verifyAdminToken } from '../middleware/verifyAuthToken';
 
@@ -14,6 +16,10 @@ const users = express.Router();
 users.post('/signup', [verifyAdminToken, userSignupInput], signup);
 
 users.post('/login', [userLoginInput], login);
+
+users.put('/forget-password', [userEmailInput], forgetPassword);
+
+users.put('/reset-password', [userResetInput], resetPassword);
 
 users.get('/users', [verifyAdminToken], getAllUsers);
 
